--- a/src/gui/EditorWindow/TimelinePanel/TimelinePanel.axaml
+++ b/src/gui/EditorWindow/TimelinePanel/TimelinePanel.axaml
@@ -5,6 +5,7 @@
              xmlns:c="clr-namespace:CalcBinding;assembly=CalcBindingAva"
              xmlns:rxui="http://reactiveui.net"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+             xmlns:sys="using:System"
              xmlns:vm="using:EVTUI.ViewModels"
              xmlns:cmds="using:EVTUI.ViewModels.TimelineCommands"
              xmlns:views="using:EVTUI.Views"
@@ -1605,6 +1606,49 @@
 
 <Grid>
   <DockPanel DataContext="{Binding TimelineContent}">
+    <!--ToggleButton>
+      <ToggleButton.Styles>
+        <Style Selector="ToggleButton">
+          <Style Selector="^:checked > ScrollViewer">
+            <Setter Property="IsVisible" Value="True"/>
+          </Style>
+          <Style Selector="^:unchecked > ScrollViewer">
+            <Setter Property="IsVisible" Value="false"/>
+          </Style>
+        </Style>
+      </ToggleButton.Styles-->
+    <Expander DockPanel.Dock="Left" ExpandDirection="Right" VerticalAlignment="Stretch" IsExpanded="true" MaxWidth="600" Padding="0" CornerRadius="0" MinWidth="0" BorderThickness="0" HorizontalAlignment="Center" HorizontalContentAlignment="Center">
+      <Expander.Styles>
+        <Style Selector="Border#ExpanderContent">
+          <Setter Property="BorderThickness" Value="0"/>
+          <Setter Property="CornerRadius" Value="0"/>
+        </Style>
+        <Style Selector="ToggleButton">
+          <Setter Property="Margin" Value="0"/>
+          <Setter Property="Padding" Value="0"/>
+          <Setter Property="BorderThickness" Value="0"/>
+        </Style>
+        <Style Selector="Border#ExpandCollapseChevronBorder">
+          <Setter Property="Margin" Value="0"/>
+          <Setter Property="Height" Value="{x:Static sys:Double.NaN}"/>
+          <Setter Property="Width" Value="{x:Static sys:Double.NaN}"/>
+        </Style>
+        <Style Selector="Expander ToggleButton TextBlock">
+          <Setter Property="Margin" Value="0"/>
+        </Style>
+      </Expander.Styles>
+      <!--Border Cursor="RightSide" BorderBrush="red" BorderThickness="0,0,5,0"-->
+      <ScrollViewer VerticalScrollBarVisibility="Hidden" HorizontalScrollBarVisibility="Disabled" Padding="5" Margin="0" Background="{DynamicResource SystemControlBackgroundChromeMediumLowBrush}">
+        <!--ContentControl Name="CommandEditor" Content="{Binding ActiveCommand}"/-->
+        <ContentControl Name="CommandEditor"/>
+        <!--ContentControl Name="CommandEditor" Content="{Binding !$parent[views:TimelinePanel]((vm:TimelinePanelViewModel)DataContext).ActiveCommand}"/-->
+      </ScrollViewer>
+      <!--/Border-->
+    </Expander>
+    <!--/ToggleButton-->
+    <Expander DockPanel.Dock="Top" ExpandDirection="Down" HorizontalAlignment="Stretch" IsExpanded="true" MaxHeight="400">
+      <TextBlock Text="hiiiii"/>
+    </Expander>
     <DockPanel DockPanel.Dock="Top">
       <StackPanel Orientation="Horizontal" DockPanel.Dock="Left">
         <Button Classes="accented" Click="ShowAllCategories" CornerRadius="5,0,0,5">
@@ -1843,7 +1887,8 @@
                   </ItemsControl.Styles>
                   <ItemsControl.ItemTemplate>
                     <DataTemplate>
-                      <Button Flyout="{StaticResource CommandFlyout}"
+                      <!--Button Flyout="{StaticResource CommandFlyout}"-->
+                      <Button Click="PopulateCommandEditor"
                        Classes.inactive="{Binding !IsInPlayRange}"
                        HorizontalAlignment="Center"
                        Width="{c:Binding 60 + 85*(Duration-1)}">
